# pdf_parser

./: pyproject.toml
src/: __init__.py  base_parser.py  characters.py  content_block.py  serializable_content_block.py  state_machine.py
src/layout_analysis/: detection_utils.py  layout_detection.py  recursive_lines.py  table_cell_detection.py
src/layout_analysis/paddle_utils/: keypoint_preprocess.py  preprocess.py
src/models/: .gitattributes
src/models/picodet_lcnet_x1_0_fgd_layout_table_infer/: infer_cfg.yml  model.pdiparams  model.pdiparams.info  model.pdmodel
src/utils/: colorutils.py  normalization.py  pandautils.py  stringutils.py
